# fbzl

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  doc.bzl  doc.md
.bcr/: metadata.template.json
.github/workflows/: tag-and-release.yml
integration/: BUILD.bazel  MODULE.bazel  file.bzl  file.md
lib/: BUILD.bazel  bzl_library.bzl  bzl_library.md
