load("@fbzl//lib:bzl_library.bzl", "bzl_library")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)

# bazel run //:buildifier
buildifier(
    name = "buildifier",
)

bzl_library(
    name = "file",
    srcs = ["file.bzl"],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

