module(
    name = "integration",
    version = "0.0.0",
)


bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "protobuf", version = "33.4")
#bazel_dep(name = "rules_pkg", version = "1.1.0")
#bazel_dep(name = "stardoc", version = "0.8.1")


bazel_dep(name = "fbzl", version = "0.0.0")
local_path_override(
    module_name = "fbzl",
    path = "../",
)
