load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
#load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
#load("@buildifier_prebuilt//:rules.bzl", "buildifier")
#load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
#load("@stardoc//stardoc:stardoc.bzl", "stardoc")

bzl_library(
    name = "bzl_library",
    srcs = ["bzl_library.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//:bzl_library",
        "@bazel_lib//lib:write_source_files",
        "@buildifier_prebuilt//:rules",
        "@stardoc//stardoc:stardoc_lib",
    ],
)
