load("@bazel_lib//:bzl_library.bzl", lib_bzl_library = "bzl_library")

lib_bzl_library(
    name = "bzl_library",
    srcs = ["bzl_library.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//:bzl_library",
        "@bazel_lib//lib:write_source_files",
        "@stardoc//stardoc:stardoc_lib",
    ],
)
