load(":bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bzl_library",
    srcs = ["bzl_library.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//:bzl_library",
        "@bazel_lib//lib:write_source_files",
        "@stardoc//stardoc:stardoc_lib",
    ],
)

